Add two endpoints as a way to trigger index/serach

--- a/ElasticSearch/Properties/launchSettings.json
+++ b/ElasticSearch/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "es/index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
