--- a/ElasticSearch/appsettings.Development.json
+++ b/ElasticSearch/appsettings.Development.json
@@ -1,8 +1,20 @@
 {
+  "ElasticConnection": {
+    "Url": "my-elastic-cluster.mydomain.com"
+  },
+  "EntitiesApi": {
+    "Url": "http://localhost:222/api/"
+  },
+  "MetricsApi": {
+    "Url": "http://localhost:333/api/"
+  },
+  "IndexingSettings": {
+    "IndexingFrequency": 300,
+    "MaxDocumentsPerBatch": 5000
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
+      "Default": "Information",
       "Microsoft": "Information"
     }
   }
